--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notfallmedizin - Multi-Listen Arzneimittel-DB</title>
+    <title>Notfallmedizin - Arzneimittel-DB</title>
     <style>
         :root { --primary: #d32f2f; --secondary: #455a64; --bg: #f4f7f6; --accent: #1976d2; }
         body { font-family: 'Segoe UI', Roboto, sans-serif; background-color: var(--bg); padding: 20px; color: #333; }
@@ -54,7 +54,7 @@
 <body>
 
 <div class="container">
-    <h1>Arzneimittelverwaltung (Multi-Listen)</h1>
+    <h1>Arzneimittelverwaltung Notfallmedizin</h1>
 
     <div class="toolbar">
         <input type="text" id="search-bar" placeholder="Suche Name, Wirkstoff, Liste..." onkeyup="filterTabelle()">
@@ -308,4 +308,5 @@
 </script>
 
 </body>
+
 </html>
